--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="cardwrapper">
+        <section id="s1">
+            <p>text</p>
+          </section>
+          <section id="s2">
+            <p>text</p>
+          </section>
+          <section id="s3">
+            <p>text</p>
+          </section>
+          <section id="s4">
+            <p>text</p>
+          </section>
+          <section id="s5">
+            <p>text</p>
+          </section>
+          <section id="s6">
+            <p>text</p>
+          </section>
+    </div>
+</body>
+</html>
