några nya grunder

--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div id="wrapper">
+ <header> <h1>namn</h1>
+  <nav>
+    <ul>
+      <li>startsida</li>
+      <li>om företaget</li>
+      <li>kontakta</li>
+    </ul>
+  </nav>
+</header>
+<main>huvudinnehåll</main>
+<footer>footer</footer>
+</div>
+
     <div id="cardwrapper">
         <section id="s1">
             <p>text</p>
