--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 <div id="wrapper">
- <header> <h1>namn</h1>
+ <header> <h1>No Cap</h1>
   <nav>
     <ul>
-      <li>startsida</li>
-      <li>om företaget</li>
+      <li><a href="#startsida"> startsida</a></li>
+      <li><a href="#om"> om företaget</a></li>
       <li>kontakta</li>
     </ul>
   </nav>
